mlflow-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-svc
  namespace: mlflow
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
