nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-svc
spec:
  type: NodePort
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
